--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -1,10 +1,13 @@
-<% salt = SecureRandom.random_bytes(12) %>
 
 default_connection:
   publisher: default
 
+suspended_gemini_connection:
+  publisher: gemini_suspended
+
 connection_with_token:
   publisher: gemini_completed
+  <% salt = SecureRandom.random_bytes(12) %>
   encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
     'access_token',
     key: GeminiConnection.new.send(:encryption_key),
@@ -18,4 +21,20 @@ connection_with_token:
   ) %>"
   encrypted_refresh_token_iv: "<%= Base64.encode64(salt) %>"
 
-
+connection_not_verified:
+  publisher: gemini_not_completed
+  is_verified: false
+  status: 'Active'
+  <% salt = SecureRandom.random_bytes(12) %>
+  encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
+    'access_token',
+    key: GeminiConnection.new.send(:encryption_key),
+    iv: salt
+  ) %>"
+  encrypted_access_token_iv: "<%= Base64.encode64(salt) %>"
+  encrypted_refresh_token:  "<%= TotpRegistration.encrypt_secret(
+    'access_token',
+    key: GeminiConnection.new.send(:encryption_key),
+    iv: salt
+  ) %>"
+  encrypted_refresh_token_iv: "<%= Base64.encode64(salt) %>"
