--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -54,6 +54,23 @@ gemini_completed:
   default_currency_confirmed_at: "<%= DateTime.now %>"
   subscribed_to_marketing_emails: true
 
+gemini_not_completed:
+  email: "gemini_not@completed.org"
+  name: "Gemini the Completed"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+
+gemini_suspended:
+  email: "gemini_suspended@completed.org"
+  name: "Gemini the Completed"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+
+
 completed_partner:
   email: "partner@completed.org"
   name: "Paul the Partner"
