--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -41,7 +41,7 @@ default: &default
   piwik_host_prefix: <%= ENV["PIWIK_HOST_PREFIX"] %>
   proxy_url: <%= ENV["PROXY_URL"] %>
 
-  elasticsearch_url: <%= ENV["ELASTICSEARCH_URL"] || "http://localhost:9200" %>
+  elasticsearch_url: <%= ENV["ELASTICSEARCH_URL"] %>
   # AWS S3 sttings
   s3_rewards_public_domain: <%= ENV["S3_REWARDS_PUBLIC_DOMAIN"] %>
   s3_rewards_access_key_id: <%= ENV["S3_REWARDS_ACCESS_KEY_ID"] %>
@@ -137,6 +137,7 @@ development:
   active_promo_id: "free-bats-2018q1"
   bat_ratios_url: "https://bat-ratios-dev.herokuapp.com"
   base_referral_url: "brave.com"
+  elasticsearch_url: <%= ENV["ELASTICSEARCH_URL"] || "http://localhost:9200" %>
   internal_email: brave-publishers@localhost.local
   support_email: brave-publishers@localhost.local
   from_email: Brave Rewards Publishers Dev<brave-publishers@localhost.local>
