Build on dev branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ name: Ruby
 
 on:
   push:
-    branches: [ master, staging ]
+    branches: [ master, staging, dev ]
   pull_request:
     branches: [ master, staging ]
 
