Send daily emails for promos

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -13,6 +13,10 @@
     cron: "42 1 * * *"
     decription: "For Site Channels created within the past week, enqueue jobs to verify the domain of each unique brave_publisher_id."
     queue: scheduler
+  EnqueueEmailsForPromoPublishersJob:
+    cron: "0 23 * * *"
+    decription: "For emails for promo publishers job"
+    queue: scheduler
   CleanStaleUpholdDataJob:
     cron: "0 4 * * *"
     description: "For Publishers who have stale uphold codes or access parameters, clean out uphold codes or access parameter."
