--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -10,12 +10,12 @@
     "react-dom-confetti": "^0.1.0",
     "react-intl": "^5.8.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.4",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/helper-call-delegate": "^7.11.4",
-    "prettier": "1.16.3"
+    "prettier": "1.16.3",
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
