Add feature flags, UI work, env variables, etc

--- a/base.yml
+++ b/base.yml
@@ -28,6 +28,11 @@ services:
       - BRAVE_WEBSITE_URL
       - BAT_WEBSITE_URL
       - BAT_TWITTER_URL
+      - BITFLYER_HOST
+      - BITFLYER_CLIENT_ID
+      - BITFLYER_CLIENT_SECRET
+      - BITFLYER_SCOPE
+      - CREATORS_HOST
       - FEE_RATE
       - DATABASE_URL
       - DATABASE_URL_TEST
