--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,6 +11,7 @@
 # if you're sharing your code publicly.
 
 default: &default
+  creators_host: <%= ENV["CREATORS_HOST"] %>
   admin_ip_whitelist: <%= ENV["ADMIN_IP_WHITELIST"] %>
   # (Optional) Token required to use this app's API.
   api_auth_token: <%= ENV["API_AUTH_TOKEN"] %>
@@ -73,6 +74,11 @@ default: &default
   uphold_login_client_secret: <%= ENV["UPHOLD_LOGIN_CLIENT_SECRET"] %>
   uphold_api_uri: <%= ENV["UPHOLD_API_URI"] %>
   uphold_scope: <%= ENV["UPHOLD_SCOPE"] %>
+  # bitFlyer env variables
+  bitflyer_host: <%= ENV["BITFLYER_HOST"] %>
+  bitflyer_client_id: <%= ENV["BITFLYER_CLIENT_ID"] %>
+  bitflyer_client_secret: <%= ENV["BITFLYER_CLIENT_SECRET"] %>
+  bitflyer_scope: <%= ENV["BITFLYER_SCOPE"] %>
 
   # Use offline mode of publisher host inspector
   host_inspector_offline: <%= ENV["HOST_INSPECTOR_OFFLINE"] %>
