--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@ stats_redshift_default: &stats_redshift_default
   database: <%= ENV["STATS_REDSHIFT_DBNAME"] %>
   username: <%= ENV["STATS_REDSHIFT_USER"] %>
   password: <%= ENV["STATS_REDSHIFT_PASSWORD"] %>
+  replica: true
   schema_search_path: "stats"
 
 development:
