--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,18 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+stats_redshift_default: &stats_redshift_default
+  adapter: redshift
+  encoding: utf8
+  pool: 3
+  port: <%= ENV["STATS_REDSHIFT_PORT"] %>
+  host: <%= ENV["STATS_REDSHIFT_HOST"] %>
+  database: <%= ENV["STATS_REDSHIFT_DBNAME"] %>
+  username: <%= ENV["STATS_REDSHIFT_USER"] %>
+  password: <%= ENV["STATS_REDSHIFT_PASSWORD"] %>
+  replica: true
+  schema_search_path: "stats"
+
 development:
   primary:
     <<: *default
@@ -15,6 +27,8 @@ development:
     <<: *default
     url: <%= ENV['DATABASE_URL'] || "postgres://postgres@localhost/brave_publishers_dev" %>
     replica: true
+  stats_redshift:
+    <<: *stats_redshift_default
 
 test:
   primary:
@@ -40,6 +54,8 @@ production:
     <<: *default
     url: <%= ENV['FOLLOWER_DATABASE_URL'] %>
     replica: true
+  stats_redshift:
+    <<: *stats_redshift_default
 
 staging:
   primary:
@@ -49,3 +65,5 @@ staging:
     <<: *default
     url: <%= ENV['DATABASE_URL'] %>
     replica: true
+  stats_redshift:
+    <<: *stats_redshift_default
