Updates the README with newer Oauth instructions
As I went through the README, I noticed that some of the
instructions are out-of-date. At the same time, I'd like
to start moving references to the app to 'creators' instead
of 'publishers' wherever possible to start unifying on the
new name.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ BASE_REFERRAL_LINK="brave.com"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
+# For Youtube channel stats via the data api
+YOUTUBE_API_KEY=""
+
 # Create a reddit application - https://www.reddit.com/prefs/apps
 REDDIT_CLIENT_ID=""
 REDDIT_CLIENT_SECRET=""
@@ -44,3 +47,7 @@ VIMEO_CLIENT_SECRET=""
 # Create a Github Connection - https://developer.github.com/apps/building-github-apps/creating-a-github-app/
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# For RECAPCHA  - https://github.com/ambethia/recaptcha#rails-installation
+RECAPTCHA_SITE_KEY=""
+RECAPTCHA_SECRET_KEY=""
