Populate channel name in Japanese emails
Resolves #3075. We were using a multibyte percentage symbol for
variable substitution which did not trigger the substitution.
This has been corrected in multiple emails as well as updating
the preview code to correctly preview the emails in Japanese.

--- a/test/fixtures/publisher_notes.yml
+++ b/test/fixtures/publisher_notes.yml
@@ -37,7 +37,7 @@ thread_note:
 
 child_note:
   publisher: just_notes
-  note: "This is child note"
+  note: "This is child note@"
   created_at: "2018-12-04"
   created_by: admin
   thread: thread_note
