--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -74,7 +74,7 @@ default: &default
   uphold_login_client_secret: <%= ENV["UPHOLD_LOGIN_CLIENT_SECRET"] %>
   uphold_api_uri: <%= ENV["UPHOLD_API_URI"] %>
   uphold_scope: <%= ENV["UPHOLD_SCOPE"] %>
-  # bitFlyer env variables
+  # Bitflyer env variables
   bitflyer_host: <%= ENV["BITFLYER_HOST"] %>
   bitflyer_client_id: <%= ENV["BITFLYER_CLIENT_ID"] %>
   bitflyer_client_secret: <%= ENV["BITFLYER_CLIENT_SECRET"] %>
@@ -209,6 +209,11 @@ test:
   sendgrid_marketing_list_id: 10300648
   sendgrid_publishers_list_id: 3986776
   slack_webhook_url: false
+  # Bitflyer env variables
+  bitflyer_host: "https:://localhost/bitflyertest"
+  bitflyer_client_id: "client_id_abc123"
+  bitflyer_client_secret: "client_secret_123abc"
+  bitflyer_scope: "some_scope"
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
