--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -70,7 +70,7 @@
     cron: "0 0 1 * *"
     description: "Generates the list of unsettled transactions on the first of every month"
     queue: scheduler
-  SetPayoutInProgressJob:
+  SetPayoutsInProgressJob:
     cron: "0 0 1 * *"
     description: "Sets a flag in redis which tells the app to display 'payout in progress' at the beginning of the month."
     queue: scheduler
