Enable Bitflyer potential payments
We can now generate potential payments fot Bitflyer creators.
Note that I tried to clean up a little of the calling code,
as it appears we no longer need should_send_notifications.
Also the class is now easily testable without using web mocks
since we can pass in the refresher.

--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -1,5 +1,6 @@
 default_connection:
   publisher: default
+  recipient_id: 'RECIPIENT 1'
 
 connection_with_token:
   publisher: default
@@ -16,3 +17,10 @@ connection_with_token:
     iv: salt
   ) %>"
   encrypted_refresh_token_iv: "<%= Base64.encode64(salt) %>"
+
+suspended_bitflyer_connection:
+  publisher: bitflyer_suspended
+
+enabled_bitflyer_connection:
+  publisher: bitflyer_enabled
+  recipient_id: 'bitflyer_enabled_connectionABC'
