--- a/test/fixtures/publisher_status_updates.yml
+++ b/test/fixtures/publisher_status_updates.yml
@@ -55,3 +55,7 @@ active_<%= item %>:
 gemini_suspended_status:
   publisher: gemini_suspended
   status: "suspended"
+
+bitflyer_suspended_status:
+  publisher: bitflyer_suspended
+  status: "suspended"
