--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -240,6 +240,18 @@ suspended:
   details: suspended_details (SiteChannelDetails)
   verified: true
 
+bitflyer_enabled_channel:
+  publisher: bitflyer_enabled
+  details: bitflyer_enabled_details (SiteChannelDetails)
+  verified: true
+  deposit_id: 'bitflyer_enabled_channel123'
+
+bitflyer_suspended_channel:
+  publisher: bitflyer_suspended
+  details: bitflyer_suspended_details (SiteChannelDetails)
+  verified: true
+  deposit_id: 'bitflyer_enabled_channel321'
+
 fraudulently_verified_site:
   publisher: fraudulent_verifier
   details: fraudulently_verified_site_details (SiteChannelDetails)
