Allow backfilling of BitFlyer deposit_id's via a background job.
At the moment the after_save calls are all done in a after save as a blocking call.
We could move these calls to a job if there doesn't seem to be any
repurcussions.

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -311,3 +311,8 @@ gemini_completed_website:
   publisher: gemini_completed
   verified: true
   details: gemini_completed_website_details (SiteChannelDetails)
+
+bitflyer_enabled_website:
+  publisher: bitflyer_enabled
+  verified: true
+  details: bitflyer_completed_website_details(SiteChannelDetails)
