--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -61,6 +61,10 @@
     cron: "0 4 * * *"
     description: "For Publishers who have stale uphold codes or access parameters, clean out uphold codes or access parameter."
     queue: scheduler
+  Sync::Bitflyer::UpdateMissingDepositsJob:
+    cron: "0 4 * * *"
+    description: "For bitflyer channels missing their deposit IDs"
+    queue: low
   EnqueuePublishersForPayoutJob:
     cron: "0 0 23 * *"
     args: ['send_notifications']
