--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -3,7 +3,7 @@ default_connection:
   recipient_id: 'RECIPIENT 1'
 
 connection_with_token:
-  publisher: default
+  publisher: bitflyer_enabled
   <% salt = SecureRandom.random_bytes(12) %>
   encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
     'access_token',
