--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "react-intl": "^3.3.2",
     "react-select": "^3.0.8",
     "react-tooltip": "^4.2.3",
-    "styled-components": "^5.1.0",
+    "styled-components": "5.1.0",
     "tributejs": "^3.7.1",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
