--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -315,7 +315,7 @@ bitflyer_enabled:
   email: "bitflyer_enabled@brave.com"
   name: "Bitflyer Enabled"
   selected_wallet_provider_type: BitflyerConnection
-  selected_wallet_provider_id: bitflyer_connections(:selected_wallet_provider_connection)
+  selected_wallet_provider_id: bitflyer_connections(:connection_with_token)
   agreed_to_tos: "<%= 1.day.ago %>"
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
