--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -7,6 +7,7 @@ suspended_gemini_connection:
 
 connection_with_token:
   publisher: gemini_completed
+  is_verified: true
   <% salt = SecureRandom.random_bytes(12) %>
   encrypted_access_token:  "<%= TotpRegistration.encrypt_secret(
     'access_token',
