Rely on selected_wallet_provider for payouts
Now that the duplicates have been removed and the wallets
backfilled, we can rely on this for pretty much anything in
the system. Let's start with the payouts.

--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -175,6 +175,7 @@ uphold_connected_currency_unconfirmed:
   name: "Carol the unconfirmed currency"
   agreed_to_tos: "<%= 1.day.ago %>"
   two_factor_prompted_at: "<%= 1.day.ago %>"
+  selected_wallet_provider: verified_no_currency (UpholdConnection)
 
 youtube_initial:
   email: "alice@spud.com"
