--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -53,6 +53,16 @@ gemini_completed:
   agreed_to_tos: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= DateTime.now %>"
   subscribed_to_marketing_emails: true
+  selected_wallet_provider: connection_with_token (GeminiConnection)
+
+gemini_in_japan:
+  email: "gemini_in_japan@completed.org"
+  name: "Gemini in Japan"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+  selected_wallet_provider: gemini_in_japan_connection (GeminiConnection)
 
 gemini_not_completed:
   email: "gemini_not@completed.org"
@@ -319,6 +329,7 @@ bitflyer_enabled:
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
   feature_flags: <%= { UserFeatureFlags::BITFLYER_ENABLED => true }.to_json %>
+  selected_wallet_provider: enabled_bitflyer_connection (BitflyerConnection)
 
 bitflyer_not_enabled:
   email: "bitflyer_not_enabled@brave.com"
