--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -80,6 +80,14 @@ gemini_suspended:
   default_currency_confirmed_at: "<%= DateTime.now %>"
   subscribed_to_marketing_emails: true
 
+uphold_in_japan:
+  email: "uphold_in_japan@completed.org"
+  name: "Uphold in Japan"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= DateTime.now %>"
+  subscribed_to_marketing_emails: true
+  selected_wallet_provider: uphold_in_japan_connection (UpholdConnection)
 
 completed_partner:
   email: "partner@completed.org"
