--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -354,3 +354,4 @@ bitflyer_suspended:
   agreed_to_tos: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= DateTime.now %>"
   subscribed_to_marketing_emails: true
+  selected_wallet_provider: bitflyer_suspended_connection (BitflyerConnection)
