--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -17,6 +17,7 @@ verified:
   default_site_banner_mode: true
   email: "alice@verified.org"
   name: "Alice the Verified"
+  selected_wallet_provider: verified_connection (UpholdConnection)
 
 notes:
   <<: *default
@@ -45,6 +46,7 @@ completed:
   agreed_to_tos: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= DateTime.now %>"
   subscribed_to_marketing_emails: true
+  selected_wallet_provider: unconnected (UpholdConnection)
 
 gemini_completed:
   email: "gemini@completed.org"
@@ -159,6 +161,7 @@ uphold_connected:
   agreed_to_tos: "<%= 1.day.ago %>"
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
+  selected_wallet_provider: basic_connection (UpholdConnection)
 
 uphold_connected_reauthorize:
   email: "alice_reauthorize@upholdconnected.org"
@@ -173,6 +176,7 @@ uphold_connected_details:
   agreed_to_tos: "<%= 1.day.ago %>"
   two_factor_prompted_at: "<%= 1.day.ago %>"
   default_currency_confirmed_at: "<%= 1.day.ago %>"
+  selected_wallet_provider: details_connection (UpholdConnection)
 
 uphold_connected_blocked:
   email: "alice@upholdconnectedandblocked.org"
