--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -24,6 +24,7 @@ unconnected:
 
 suspended_connection:
   publisher: suspended
+  is_member: true
 
 youtube_initial_connection:
   publisher: youtube_initial
@@ -154,6 +155,7 @@ verified_no_currency:
   uphold_state_token:
   publisher: uphold_connected_currency_unconfirmed
   address: "abcdabcd-0000-0000-0000-abcd00000007"
+  is_member: true
 
 small_media_group_connection:
   publisher: small_media_group
@@ -168,6 +170,11 @@ promo_connection:
   <<: *base_verified_connection
   publisher: promo_not_registered
   country: "VN"
+
+uphold_in_japan_connection:
+  <<: *base_verified_connection
+  publisher: uphold_in_japan
+  country: "JP"
 
 promo_lockout_connection:
   <<: *base_verified_connection
