Address missing deposit_id's in the channel model (#3210)
Allow backfilling of BitFlyer deposit_id's via a background job.

At the moment the after_save calls are all done in a after save as a blocking call.
We could move these calls to a job if there doesn't seem to be any
repercussions.

Co-authored-by: Albert Wang <=>

--- a/test/fixtures/site_channel_details.yml
+++ b/test/fixtures/site_channel_details.yml
@@ -172,3 +172,6 @@ gemini_not_completed_website_details:
 
 gemini_completed_website_details:
   brave_publisher_id: "gemini_completed_website_details.org"
+
+bitflyer_completed_website_details:
+  brave_publisher_id: "bitflyer_completed_website_details.org"
