Pass the display_name to antifraud
We also don't need to generate potential payments
for referrals for Bitflyer for the time being, until
we dedide we want to.

--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -14,6 +14,7 @@ connection_with_token:
     iv: salt
   ) %>"
   encrypted_refresh_token_iv: "<%= Base64.encode64(salt) %>"
+  display_name: 123
 
 suspended_bitflyer_connection:
   publisher: bitflyer_suspended
