Re-architecture of UpholdJob, BitflyerJob, and GeminiJob to use shared logic and to handle restarts in case if enqueueing payouts fails.
This implementation is currently meant to be run single threaded, and
might need refactoring to use less memory in the :pluck field. However,
given that uuid has 32 characters, we likely won't hit on-device memory
constaints anytime soon.

Closes https://github.com/brave-intl/publishers/issues/3286

--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -1,4 +1,4 @@
-connection_with_token:
+enabled_bitflyer_connection:
   publisher: bitflyer_enabled
   recipient_id: 'bitflyer_enabled_connectionABC'
   <% salt = SecureRandom.random_bytes(12) %>
