--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Bundler Audit Update
-        run: bundle-audit update
+        run: bundle exec bundle-audit update
       - name: Run tests
         run: RAILS_ENV=test bundle exec rails test
         env:
