(1) Skip publishers for referral payments if they're not in top referral program. (2) Remove unused job, UpholdKycByCountryJob (3) Refactor job tests to use SidekiqTestCase which runs shared before loops

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -13,6 +13,11 @@ verified:
   details: verified_details (SiteChannelDetails)
   verified: true
 
+top_referrer_channel:
+  publisher: top_referrer
+  details: top_referrer_verified_details (SiteChannelDetails)
+  verified: true
+
 verified_exclude:
   publisher: medium_media_group
   details: verified_exclude_details (SiteChannelDetails)
