--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -22,6 +22,15 @@ unconnected:
   send_emails: 2019-01-01
   country: "usa"
 
+top_referrer_connected:
+  created_at: 2019-01-01
+  publisher: top_referrer
+  send_emails: 2019-01-01
+  is_member: true
+  uphold_id: <%= SecureRandom.uuid %>
+  address: <%= SecureRandom.uuid %>
+  country: "usa"
+
 suspended_connection:
   publisher: suspended
   is_member: true
