--- a/config/storage/staging.yml
+++ b/config/storage/staging.yml
@@ -1,11 +1,11 @@
-amazon_case_notes:
+amazon_internal_bucket:
   service: S3
   access_key_id: <%= ENV['S3_PUBLISHERS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_PUBLISHERS_SECRET_ACCESS_KEY'] %>
   region: <%= ENV['S3_PUBLISHERS_BUCKET_REGION'] %>
   bucket: <%= ENV['S3_PUBLISHERS_BUCKET_NAME'] %>
 
-amazon_banner_images:
+amazon_public_bucket:
   service: S3
   access_key_id: <%= ENV['S3_REWARDS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_REWARDS_SECRET_ACCESS_KEY'] %>
