--- a/config/storage/test.yml
+++ b/config/storage/test.yml
@@ -2,10 +2,10 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-amazon_case_notes:
+amazon_internal_bucket:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-amazon_banner_images:
+amazon_public_bucket:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
