Have docker cache wasmer before installing
Wasmer has a lot of trouble properly installing
in our Docker environment when we are using deployment
mode. If not deploying, the asset compile can't find
it. So we use deployment mode, but have to cache the wasmer
gem before we do that or we get a git error due, I suspect
due to the gem not being formed properly, but wasn't able to
ascertain the exact reason.

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@
 logs/
 tmp/
 node_modules/
+storage/
 
 # Ignore bundler config.
 /.bundle
@@ -24,6 +25,8 @@ coverage
 /public/c/*
 /public/i/*
 /public/assets/*
+/public/packs-test/
+/public/creators-landing/node_modules/
 
 # Ignore node_modules
 node_modules/
