--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ package-lock.json
 .vscode
 
 .irb_history
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
