--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -132,7 +132,7 @@ blocked_connection:
   status: blocked
   publisher: uphold_connected_blocked
   encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
-    { scope: 'cards:write', access_token: '111' }.to_json,
+    { scope: 'cards:write', access_token: '111', refresh_token: '123', 'expires_in': 3599, 'expiration_date': 3599.seconds.from_now.to_s }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
     iv: salt
   ) %>"
